teams worked with

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   </li>
                   <li>
                     <strong>2</strong>
-                    <span>Satisfied Team</span>
+                    <span>Teams worked with</span>
                   </li>
                 </ul>
             </section>
