--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <p>Feel free to contact me</p>
           <a href="mailto:gabrieldevarajv@gmail.com?body=Dear%20Gabriel,%0AReaching%20you%20through%20your%20website.%0A" class="ds-button">Lets Talk</a>
         </section>
-        <span class="ds-copyright">© 2022 All rights reserved.</span>
+        <span class="ds-copyright"><!--© 2022 All rights reserved.--></span>
      </div>
    </footer>
 
