--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2 class="ds-heading">About Me</h2>
             <p>I am Gabriel Devaraj, a results-driven Liferay Portal Developer with a B.Tech in Electronics and Communications from Karunya Institute of Technology and Sciences. Proficient in Java, JavaScript, JSP, FTL, CSS, and SQL, specializing in Liferay backend development. Skilled in Git/GitHub for version control, Eclipse IDE for software development, and Excel for daily tasks. Experienced in portal management with Liferay and adept at Agile methodologies. Managed global-level portals, collaborating on modifications using Java, JSP, JS, and FTL in Eclipse, with MySQL as the primary database. Developed a college project integrating Python, Raspberry Pi, RFID technology, and Python GUI.</p>
             <div class="ds-button-sec text-center">
-                <a href="https://docs.google.com/document/d/1Tp0wN_WqXH_oscFzQgXQCIvKdXTAb8AUqGCzB3LlOwQ/edit?usp=sharing" class="ds-button">Download Resume</a>
+                <a href="https://docs.google.com/document/export?format=pdf&id=1Tp0wN_WqXH_oscFzQgXQCIvKdXTAb8AUqGCzB3LlOwQ" class="ds-button">Download Resume</a>
             </div>
         </section>
       </div>
