Updating powerschool work experience

--- a/index.html
+++ b/index.html
@@ -133,9 +133,24 @@
      <div class="container">
         <h2 class="ds-heading">Work Experience</h2>
         <div class="row ds-experience-list">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">March 2024 - Present</span>
+                <h3 class="ds-officename">Powerschool India, Chennai</h3>
+                <span class="ds-department">Software 1</span>
+                <p>Just joined, exploring the job..</p>
+                <!-- <ul>
+                  <li>Proficient use of Eclipse IDE for Java, JSP, JS, and FTL code modifications.</li>
+                  <li>Expertise in Git and GitHub for version control and collaborative development.</li>
+                  <li>MySQL as the primary database management system.</li>
+                  <li>Adherence to Agile methodologies, working in sprints with close team collaboration.</li>
+                  <li>Utilization of Jira for project management and issue tracking.</li>
+                </ul> -->
+              </section>
+            </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2021 - Present</span>
+                <span class="ds-year">June 2021 - March 2024</span>
                 <h3 class="ds-officename">Accenture Technologies, Chennai</h3>
                 <span class="ds-department">Custom Software Engineering Analyst</span>
                 <p>Liferay Portal Developer managing global-level client portals.</p>
@@ -158,18 +173,32 @@
      <div class="container">
         <h2 class="ds-heading">Education</h2>
         <div class="row ds-experience-list">
+          <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">2024 - Pursuing</span>
+                <h3 class="ds-officename">Alagappa University</h3>
+                <span class="ds-department">M.B.A in International Business (Distance Education)</span>
+              </section>
+            </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2017 - 2021</span>
+                <span class="ds-year">2017 - 2021    (78.1%)</span>
                 <h3 class="ds-officename">Karunya Institute of Technology and Sciences</h3>
                 <span class="ds-department">B.Tech Electronics and Communication Engineering</span>
               </section>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2015 - 2017</span>
+                <span class="ds-year">2015 - 2017    (81%)</span>
                 <h3 class="ds-officename">St.Thomas Matriculation Higher Secondary School</h3>
                 <span class="ds-department">HSC</span>
+              </section>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+              <section>
+                <span class="ds-year">2014 - 2015    (93%)</span>
+                <h3 class="ds-officename">St.Thomas Matriculation Higher Secondary School</h3>
+                <span class="ds-department">SSLC</span>
               </section>
             </div>
         </div>
