Included powerschool experience

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>2.5+</strong>
+                    <strong id="experience-years">0</strong>
                     <span>Experience</span>
                   </li>
                   <li>
@@ -137,15 +137,16 @@
               <section>
                 <span class="ds-year">March 2024 - Present</span>
                 <h3 class="ds-officename">Powerschool India, Chennai</h3>
-                <span class="ds-department">Software 1</span>
-                <p>Just joined, exploring the job..</p>
-                <!-- <ul>
-                  <li>Proficient use of Eclipse IDE for Java, JSP, JS, and FTL code modifications.</li>
-                  <li>Expertise in Git and GitHub for version control and collaborative development.</li>
-                  <li>MySQL as the primary database management system.</li>
-                  <li>Adherence to Agile methodologies, working in sprints with close team collaboration.</li>
-                  <li>Utilization of Jira for project management and issue tracking.</li>
-                </ul> -->
+                <span class="ds-department">Engineer 1</span>
+                <p>Software Developer in Special Education, creating and configuring tools to improve documentation and workflows for educators and students.</p>
+                  <ul>
+                    <li>Proficient in HTML, CSS, and JavaScript to develop and customize special education documentation tools.</li>
+                    <li>Worked closely with cross-functional teams to ensure tools meet accessibility and regulatory standards.</li>
+                    <li>Configuring user-friendly interfaces to simplify the management and accessibility of special education documents.</li>
+                    <li>Continuous improvement of tools based on feedback from educators and stakeholders.</li>
+                    <li>Focused on creating an inclusive environment by designing tools that address diverse learning needs.</li>
+                    <li>Enhanced the user experience for teachers by streamlining documentation workflows and reducing administrative overhead.</li>
+                  </ul>
               </section>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
