Changed about me

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>I am Gabriel Devaraj, a results-driven Liferay Portal Developer with a B.Tech in Electronics and Communications from Karunya Institute of Technology and Sciences. Proficient in Java, JavaScript, JSP, FTL, CSS, and SQL, specializing in Liferay backend development. Skilled in Git/GitHub for version control, Eclipse IDE for software development, and Excel for daily tasks. Experienced in portal management with Liferay and adept at Agile methodologies. Managed global-level portals, collaborating on modifications using Java, JSP, JS, and FTL in Eclipse, with MySQL as the primary database. Developed a college project integrating Python, Raspberry Pi, RFID technology, and Python GUI.</p>
+            <p>I’m Gabriel Devaraj, a results-driven Liferay Portal Developer with a B.Tech in Electronics and Communications from Karunya Institute of Technology and Sciences. I have hands-on experience working with Accenture and PowerSchool, specializing in backend development and portal management using Liferay.
+
+            Proficient in Java, JavaScript, JSP, FTL, CSS, and SQL, I work with Git/GitHub for version control and Eclipse IDE for software development. I am experienced in managing global portals, collaborating on modifications using Java, JSP, JS, and FTL, with MySQL as the primary database.
+
+            Skilled in Agile methodologies, I’ve delivered high-quality solutions and enhanced portal functionality. In addition to my professional experience, I developed a college project integrating Python, Raspberry Pi, RFID technology, and Python GUI, showcasing my versatility and problem-solving skills.</p>
             <div class="ds-button-sec text-center">
                 <a href="https://docs.google.com/document/export?format=pdf&id=1Tp0wN_WqXH_oscFzQgXQCIvKdXTAb8AUqGCzB3LlOwQ" class="ds-button">Download Resume</a>
             </div>
