--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!-- Education -->
 
     <!-- Certifications -->
-   <div class="ds-experience-section" id="certifications">
+   <!-- <div class="ds-experience-section" id="certifications">
      <div class="container">
         <h2 class="ds-heading">Certifications</h2>
         <div class="row ds-certifications-list">
@@ -319,7 +319,7 @@
             </div>
         </div>
      </div>
-   </div>
+   </div> -->
     <!-- Certifications -->
 
     <!-- Projects -->
