New changes new resume
New changes new resume

--- a/index.html
+++ b/index.html
@@ -167,9 +167,12 @@
 
             With 4+ years of experience spanning Liferay portal development at Accenture and Special Education product configuration at PowerSchool, I combine technical expertise with a deep understanding of educational workflows. Recognized with "Exceeded Expectations" in my first year, I'm passionate about using technology to create inclusive educational environments that make a real difference in students' lives.</p>
             <div class="ds-button-sec text-center">
-                <a href="https://docs.google.com/document/export?format=pdf&id=1Tp0wN_WqXH_oscFzQgXQCIvKdXTAb8AUqGCzB3LlOwQ" class="ds-button">Download Resume</a>
-            </div>
-        </section>
+                <!-- <a href="https://docs.google.com/document/export?format=pdf&id=1Tp0wN_WqXH_oscFzQgXQCIvKdXTAb8AUqGCzB3LlOwQ" class="ds-button">Download Resume</a> -->
+                <a href="assets/Gabriel_Devaraj_Resume_2026.pdf" download="Gabriel_Devaraj_Resume_2026.pdf" class="ds-button">
+                  Download Resume
+              </a>
+              </div>
+        </section>s
       </div>
     </div>
     <!-- about -->
