--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   Download Resume
               </a>
               </div>
-        </section>s
+        </section>
       </div>
     </div>
     <!-- about -->
